move paginator into partial and prevent page numbers rendering on mobile

--- a/themes/gfsc/assets/sass/components/_paginator.sass
+++ b/themes/gfsc/assets/sass/components/_paginator.sass
@@ -26,6 +26,9 @@
     text-align: center
     flex-grow: 1
     +border(right)
+    &.page__num
+      +for-phone-only
+        display: none
   a
     text-decoration: none
     display: block
